// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds profile views creates new profile 1`] = `
Object {
  "creator": "user(0)",
  "declaration": Object {
    "actorType": "app.bsky.system.actorUser",
    "cid": "cids(0)",
  },
  "did": "user(0)",
  "displayName": "danny boy",
  "followersCount": 1,
  "followsCount": 1,
  "handle": "dan.test",
  "myState": Object {
    "muted": false,
  },
  "postsCount": 2,
}
`;

exports[`pds profile views fetches other's profile, with a follow 1`] = `
Object {
  "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
  "creator": "user(0)",
  "declaration": Object {
    "actorType": "app.bsky.system.actorUser",
    "cid": "cids(0)",
  },
  "description": "its me!",
  "did": "user(0)",
  "displayName": "ali",
  "followersCount": 2,
  "followsCount": 3,
  "handle": "alice.test",
  "myState": Object {
    "follow": "record(0)",
    "muted": false,
  },
  "postsCount": 4,
}
`;

exports[`pds profile views fetches other's profile, without a follow 1`] = `
Object {
  "creator": "user(0)",
  "declaration": Object {
    "actorType": "app.bsky.system.actorUser",
    "cid": "cids(0)",
  },
  "did": "user(0)",
  "followersCount": 1,
  "followsCount": 1,
  "handle": "dan.test",
  "myState": Object {
    "muted": false,
  },
  "postsCount": 2,
}
`;

exports[`pds profile views fetches own profile 1`] = `
Object {
  "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
  "creator": "user(0)",
  "declaration": Object {
    "actorType": "app.bsky.system.actorUser",
    "cid": "cids(0)",
  },
  "description": "its me!",
  "did": "user(0)",
  "displayName": "ali",
  "followersCount": 2,
  "followsCount": 3,
  "handle": "alice.test",
  "myState": Object {
    "muted": false,
  },
  "postsCount": 4,
}
`;

exports[`pds profile views handles avatars & banners 1`] = `
Object {
  "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
  "banner": "https://pds.public.url/image/ejOTK5gy9tlarOXM6MhrPOs0C18LFpfd9qQ9lBrcIBE/rs:fill:3000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
  "creator": "user(0)",
  "declaration": Object {
    "actorType": "app.bsky.system.actorUser",
    "cid": "cids(0)",
  },
  "description": "blah blah",
  "did": "user(0)",
  "displayName": "ali",
  "followersCount": 2,
  "followsCount": 3,
  "handle": "alice.test",
  "myState": Object {
    "muted": false,
  },
  "postsCount": 4,
}
`;

exports[`pds profile views handles partial updates 1`] = `
Object {
  "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
  "creator": "user(0)",
  "declaration": Object {
    "actorType": "app.bsky.system.actorUser",
    "cid": "cids(0)",
  },
  "description": "blah blah",
  "did": "user(0)",
  "displayName": "ali",
  "followersCount": 2,
  "followsCount": 3,
  "handle": "alice.test",
  "myState": Object {
    "muted": false,
  },
  "postsCount": 4,
}
`;

exports[`pds profile views updates profile 1`] = `
Object {
  "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
  "creator": "user(0)",
  "declaration": Object {
    "actorType": "app.bsky.system.actorUser",
    "cid": "cids(0)",
  },
  "description": "new descript",
  "did": "user(0)",
  "displayName": "ali",
  "followersCount": 2,
  "followsCount": 3,
  "handle": "alice.test",
  "myState": Object {
    "muted": false,
  },
  "postsCount": 4,
}
`;
